--- a/vistas/login.html
+++ b/vistas/login.html
@@ -20,7 +20,7 @@
 
   </head>
   <body class="hold-transition login-page">
-      <div style=""><image src="../files/server/ALOPSA.jpg" width="270" height="100"/></div>
+      <div style=""><image src="../files/server/logo.png" width="270" height="100"/></div>
        <div class="login-box">
         
       <div class="login-logo">
